# 2048-cli

./: CMakeLists.txt  board.c  board.h
src/: board.c  main.c
test/: board.cpp
